# Python_FASTPI

./: .gitignore  README.md  main.py  pyproject.toml
controllers/: post.py
models/: post.py
services/: post.py
src/: database.py  main.py  security.py
src/controllers/: post.py
src/models/: post.py
src/schemas/: post.py
src/services/: post.py
src/views/: post.py
tests/: conftest.py
views/: post.py
